[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Slug.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Slug.gd" type="Script" id=2]
[ext_resource path="res://Scenes/StateAnimation.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/EmphasisAnimation.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Slug_n.png" type="Texture" id=5]
[ext_resource path="res://SFX/slug-spit.ogg" type="AudioStream" id=6]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
varying float VAR1;

uniform float width : hint_range(0.0, 16.0);
uniform vec4 outline_color : hint_color;
uniform vec4 emphasis_color : hint_color;
uniform float emphasis_amout : hint_range(0.0, 1.0);
uniform vec4 detail_color : hint_color;

void vertex()
{
	VAR1 = VERTEX.y;
}

void fragment(){
	vec2 size = vec2(width) / vec2(textureSize(TEXTURE, 0));
   
    vec4 sprite_color = texture(TEXTURE, UV);
	
	sprite_color.rgb = mix(sprite_color.rgb, emphasis_color.rgb, emphasis_amout);
	vec4 o_color = outline_color;
	o_color.rgb = mix(o_color.rgb, emphasis_color.rgb, emphasis_amout);
   
    float alpha = sprite_color.a;
    alpha += texture(TEXTURE, UV + vec2(0.0, -size.y)).a;
    alpha += texture(TEXTURE, UV + vec2(size.x, 0.0)).a;
    alpha += texture(TEXTURE, UV + vec2(0.0, size.y)).a;
    alpha += texture(TEXTURE, UV + vec2(-size.x, 0.0)).a;
   
    vec3 final_color = mix(o_color.rgb, sprite_color.rgb, sprite_color.a);
    COLOR = vec4(final_color, clamp(alpha, 0.0, 1.0)) ;
	MODULATE;
	if (COLOR == vec4(o_color.rgb, 1.0)){
		COLOR.a = o_color.a;
	}
	if (distance(COLOR, o_color) < 0.1 || distance(COLOR, detail_color) < 0.1 || distance(COLOR, emphasis_color) < 0.1){
		MODULATE;
	} else {
		COLOR *= MODULATE;
	}
}

void light()
{
		SHADOW_VEC = vec2(0.0);
	{
		LIGHT_HEIGHT += 10.0;
		LIGHT_HEIGHT = -LIGHT_VEC.y + VAR1 ;
	}
	LIGHT *= 1.0;
}"

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/width = 1.0
shader_param/outline_color = Color( 1, 0, 0, 0 )
shader_param/emphasis_color = Color( 1, 1, 1, 1 )
shader_param/emphasis_amout = 0.0
shader_param/detail_color = Color( 0.721569, 0.254902, 0.176471, 1 )

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10, 11, 12, 9, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:should_move")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Spit:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "Death"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 2 ) ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:should_move")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="CircleShape2D" id=7]
radius = 95.6347

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 10, 3 )

[sub_resource type="CircleShape2D" id=9]
radius = 63.9062

[sub_resource type="CapsuleShape2D" id=10]
radius = 4.0
height = 14.0

[node name="Slug" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 2 )
position = Vector2( 4, -4 )
texture = ExtResource( 1 )
normal_map = ExtResource( 5 )
hframes = 7
vframes = 3
frame = 11

[node name="ShootPosition" type="Position2D" parent="Sprite"]
position = Vector2( 3, -10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Attack = SubResource( 3 )
anims/Death = SubResource( 4 )
anims/Idle = SubResource( 5 )
anims/Walk = SubResource( 6 )

[node name="DetectionArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 8 )

[node name="AttackArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource( 9 )

[node name="StateAnimation" parent="." instance=ExtResource( 3 )]

[node name="EmphasisAnimation" parent="." instance=ExtResource( 4 )]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -4 )
rotation = 1.57079
shape = SubResource( 10 )

[node name="Spit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
attenuation = 0.392292
bus = "SFX"

[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_AttackArea_body_exited"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
